--- a/html/resume.html
+++ b/html/resume.html
@@ -91,7 +91,7 @@ IS 201 online
         Provo, UT, 84606
 
         <p>
-            See my  <a href="https://en.wikipedia.org/wiki/Homer_Simpson" target="_blank" title="Why Me">inspirational website.</a>
+            See my  <a href="https://livgills.github.io/professionalpage/" target="_blank" title="Why Me">inspirational website.</a>
         </p>
     </div>
     <div class="common footer">Footer
